# Fraud-detection-reference

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  BUILD_GUIDE.md  COMPLETE_PROJECT_GUIDE.md  Dockerfile  FROM_SCRATCH_GUIDE.md  HOW_TO_RUN.md  Makefile  PROJECT_FLOW.md  README.md  app.py  config.yaml  flask_app.py  pyproject.toml  render.yaml  requirements-serve.txt  requirements.txt
.github/workflows/: ci.yml
frontend/: index.html
models/: inference_config.json  reference_profile.json
monitoring/: __init__.py  drift_monitor.py
notebooks/: fraud_severity_project.ipynb
reports/: report.html
scripts/: __init__.py  build_report.py  generate_synthetic_data.py  make_notebook.py
src/: __init__.py  config.py  data_ingestion.py  eda.py  exception.py  explainability.py  feature_engineering.py  fraud_model.py  inference_pipeline.py  logger.py  schemas.py  severity_model.py  threshold_optimizer.py  tracking.py  train.py
static/: app.js  styles.css
tests/: conftest.py  test_api.py  test_data_ingestion.py  test_feature_engineering.py  test_flask.py  test_threshold_and_drift.py
